# vogon-iot-collector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/database/: database.sql
docs/systemd/: vogon-collector.service
vogon_iot_collector/: __main__.py  config.py
vogon_veggie_collector/: __main__.py  config.py
